# brick-assistant

./: .env.example  .gitignore  README.md  basic_usage_examples.ipynb  compiled_graphs.py  eval_rdf.py  eval_vanilla_ttl.py  langfuse_evals.py  langgraph.json  modularized_eval.py  pyproject.toml  rdf_explore.py  testing.ipynb  vanilla.ipynb
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data/: metadata.json  metadataloc.json
data/ttl_files/: bui_BCFS.ttl  bui_BCFT.ttl  bui_BCFV.ttl  bui_BCG7.ttl  bui_BCGE.ttl  bui_BCGF.ttl  bui_BCGG.ttl  bui_BCGH.ttl  bui_BCGI.ttl  bui_BCGK.ttl  bui_BCGM.ttl  bui_BCGN.ttl  bui_BCGP.ttl  bui_BCGR.ttl  bui_BCGU.ttl  bui_BCGV.ttl  bui_BCGW.ttl  bui_BCGX.ttl  bui_BCGY.ttl  bui_BCH2.ttl
slides/: BRICK-ASSISTANT.pptx
src/brick_assistant/config/: configs.py
src/brick_assistant/evals/: dataset_ttl.py  eval_boilerplate.py  grader.py
src/brick_assistant/graphs/: abstract_graph.py  abstract_rdf.py  wuerth_vanilla_graph.py  wuerth_vanilla_graph_dev.py  wuerth_vanilla_graph_dev_rdf.py
src/brick_assistant/helpers/: llm_models.py
src/brick_assistant/tools/: functions.py  prompts.py  rdf_query.py  tools.py
src/wuerth_agent/config/: settings.py
src/wuerth_agent/evals/: dataset_ttl.py  eval_boilerplate.py  grader.py
src/wuerth_agent/graphs/: abstract_graph.py  abstract_rdf.py  wuerth_vanilla_graph.py  wuerth_vanilla_graph_dev.py  wuerth_vanilla_graph_dev_rdf.py
src/wuerth_agent/helpers/: llm_models.py
(+3 files in other folders)
