[project]
name = "brick_assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf",
    "jupyterlab",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langchain-openai",
    "langgraph",
    "langgraph-cli[inmem]",
    "pandas",
    "psycopg2-binary",
    "pydantic",
    "pyparsing",
    "python-dotenv",
    "rdflib",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff.lint]
extend-select = ["B"]